# subterranum

./: '  .gitignore  Cargo.toml  LICENSE.md  README.md
docs/: planning.md
planning/: milestones.md
resources/: config.toml  prefab.txt
resources/data/: item.json  living.json  tile.json
resources/rex/: cave_entrance.xp  double_room.xp  intro_screen.xp  options_box.xp  small_cave.xp
saves/: player.sav
src/: actor.rs  combat.rs  config.rs  fov.rs  gui.rs  input.rs  item.rs  main.rs  map.rs  map_scanning.rs  menu.rs  messagelog.rs  monster.rs  prefab.rs  save_system.rs  state.rs  tiles.rs  worldgen.rs
src/data_read/: living_structs.rs  mod.rs  perlin_structs.rs  tile_structs.rs
