[package]
name = "terra_incognita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = {version = "0.10.0", features= ["column-serialize"]}
bracket-terminal = "0.8.2"
bracket-noise = "0.8.7"
bracket-pathfinding = "0.8.7"
bracket-random = "0.8.2"
rand = "0.8.5"
toml = "0.7.2"
serde = { version = "1.0", features = ["derive"] }